[gd_scene load_steps=6 format=3 uid="uid://cci6dwxmbapt1"]

[ext_resource type="Script" path="res://addons/inventory-system/ui/craft/craft_station_ui.gd" id="1_ny8hp"]
[ext_resource type="PackedScene" uid="uid://duq60fhdry5hv" path="res://addons/inventory-system/ui/craft/recipe_ui.tscn" id="2_jgmgq"]
[ext_resource type="Script" path="res://addons/inventory-system/ui/craft/craftings_ui.gd" id="3_imm8o"]
[ext_resource type="PackedScene" uid="uid://db7sndy7hfpq2" path="res://addons/inventory-system/ui/craft/crafting_ui.tscn" id="4_5nmfv"]
[ext_resource type="PackedScene" uid="uid://1dijqt6vr078" path="res://addons/inventory-system/ui/inventory_ui.tscn" id="7_g573c"]

[node name="CraftStationUI" type="Control" node_paths=PackedStringArray("input_inventory_ui", "output_inventory_ui")]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = 13.0
offset_right = 620.0
offset_bottom = 267.0
grow_vertical = 2
script = ExtResource("1_ny8hp")
recipe_ui_scene = ExtResource("2_jgmgq")
input_inventory_ui = NodePath("InventoryUI")
output_inventory_ui = NodePath("InventoryUI2")

[node name="CraftingsUI" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -552.0
offset_right = 70.0
grow_vertical = 0
alignment = 2
script = ExtResource("3_imm8o")
crafting_ui_scene = ExtResource("4_5nmfv")

[node name="RecipesUI" type="Panel" parent="."]
custom_minimum_size = Vector2(436, 5)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 83.0
offset_right = -85.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="RecipesUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="RecipesUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="Title" type="MarginContainer" parent="RecipesUI/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="TitleLabel" type="Label" parent="RecipesUI/VBoxContainer/Panel/Title"]
unique_name_in_owner = true
layout_mode = 2
text = "Recipes"

[node name="Control" type="Control" parent="RecipesUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="RecipesUI/VBoxContainer/Control"]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 432.0
offset_bottom = 222.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="RecipesContent" type="VBoxContainer" parent="RecipesUI/VBoxContainer/Control/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryUI" parent="." instance=ExtResource("7_g573c")]
custom_minimum_size = Vector2(436, 140)
layout_mode = 1
offset_left = -219.0
offset_top = -281.0
offset_right = 217.0
offset_bottom = -141.0

[node name="InventoryUI2" parent="." instance=ExtResource("7_g573c")]
custom_minimum_size = Vector2(436, 140)
layout_mode = 1
offset_left = -219.0
offset_top = -432.0
offset_right = 217.0
offset_bottom = -292.0
